[gd_scene load_steps=3 format=3 uid="uid://c71iftre7mnwu"]

[ext_resource type="Texture2D" uid="uid://13mm4ejdevx7" path="res://icon.svg" id="1_3gk12"]
[ext_resource type="Script" uid="uid://c2qodanlgfkpr" path="res://UI/Tools/tool.gd" id="2_n5j8b"]

[node name="Tool" type="TextureButton"]
texture_normal = ExtResource("1_3gk12")
script = ExtResource("2_n5j8b")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
